--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
-                <a href="service.html" class="nav-item nav-link">Company Profile</a>
-                <a href="service.html" class="nav-item nav-link">Contact Us</a>
+                <a href="#" class="nav-item nav-link">Company Profile</a>
+                <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 <!-- <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu fade-up m-0">
@@ -79,7 +79,7 @@
     <div class="container-fluid p-0 pb-5">
         <div class="owl-carousel header-carousel position-relative mb-5">
             <div class="owl-carousel-item position-relative">
-<!--                 <img class="img-fluid" src="img/2.png" alt=""> -->
+                <img class="img-fluid" src="img/2.png" alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -87,7 +87,7 @@
                                 <!-- <h5 class="text-white text-uppercase mb-3 animated slideInDown">Buraq Overseas</h5> -->
                                 <h1 class="display-3 text-white animated slideInDown mb-4">Buraq Overseas</h1>
                                 <!-- <p class="fs-5 fw-medium text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p> -->
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Contact Us</a>
+                                <a href="contact.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Contact Us</a>
                                 <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Free Quote</a> -->
                             </div>
                         </div>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                <img class="img-fluid" src="img/s3.jpg" alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -621,7 +621,7 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">Mohasin Patel</a>
+                        Designed By <a class="border-bottom" href="https://htmlcodex.com">Asif Sayyed & Mohasin Patel</a>
                         <!-- </br>Distributed By <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a> -->
                     </div>
                 </div>
